[package]
name = "chinese_search_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = { version = "0.6", features = ["tfidf", "textrank"] }
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"


[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
